# CyberVerse

./: .gitignore  Makefile  README.ja.md  README.ko.md  README.md  README.zh-CN.md  claude.md  cyberverse_config.yaml  pyproject.toml
.claude/: settings.local.json
agent_runtime/: __init__.py  callbacks.py  graph.py  i18n.py  llm.py  schemas.py  server.py  tools.py
docs/zh-CN/: README.md
docs/zh-CN/features/: 2026-05-11-persona-agent-task-mvp.md
frontend/src/components/: CharacterCard.vue  ChatPanel.vue  KnowledgeSourceManager.vue
frontend/src/composables/: useChat.ts  useDirectWebRTC.ts  useVisualInput.ts  useWebRTC.ts
frontend/src/i18n/: messages.ts
frontend/src/pages/: CharacterEditPage.vue  KanshanLandingPage.vue  KanshanOAuthCallbackPage.vue  LaunchConfigPage.vue  SessionPage.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: zhihuAuth.ts
inference/: server.py
inference/core/: __init__.py  types.py
inference/plugins/llm/: base.py  openai_plugin.py
inference/plugins/voice_llm/: base.py  doubao_config.py  doubao_protocol.py  doubao_realtime.py  persona_agent.py  qwen_omni_realtime.py
inference/rag/: __init__.py  engine.py
inference/services/: avatar_service.py  llm_service.py  rag_service.py  voice_llm_service.py
infra/: .env.example  Dockerfile.inference  cyberverse_config.example.yaml  docker-compose.yml
models/SoulX-LiveAct/model_liveact/: model_memory.py
models/flash_head/: README.md
proto/: common.proto  llm.proto  rag.proto  voice_llm.proto
server/: go.mod  go.sum
server/cmd/cyberverse-server/: main.go
server/internal/agenttask/: service.go  store.go  types.go  (+1 more)
tests/integration/: test_flash_head_generates_real_video.py
tests/unit/: test_agent_runtime_callbacks.py  test_agent_runtime_i18n.py  test_agent_runtime_llm.py  test_config.py  test_doubao_plugin.py  test_grpc_services.py  test_inference_server.py  test_openai_plugins.py  test_persona_agent_plugin.py  test_persona_rag_tool.py  test_qwen_omni_plugin.py  test_rag_engine.py  test_voice_llm_grpc_service.py
(+55 files in other folders)
